# ErwinDiscordBot

./: .breakpoints  .env  .gitignore  .replit.nix  3.7.4  api_query.py  bot.py  commands_test.py  general_replies.py  mental_health_replies.py  pyproject.toml  readme.md  testing_ftrs.py
resources/: motivation.txt
test_stuff/: cracke_no.py  selenium_scaper.py  tasks_test.py  test1.py
test_stuff/nlp stuff/: movies.txt  nlp01.py  nlp_nltk.py  text_test1.txt
