[tool.poetry]
name = "repl_python3_ErwinDiscordBot"
version = "0.1.0"
description = ""
authors = ["honeylemonicete <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
bs4 = "^0.0.1"
rauth = "^0.7.3"
lxml = "^4.6.4"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
